[tool.poetry]
name = "asyncsched"
version = "0.1.0.dev0"
description = "async library for sched"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/asyncgui/asyncsched'
homepage = 'https://github.com/asyncgui/asyncsched'
keywords = ['async', ]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "asyncsched", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
asyncgui = "~0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^6.0.0"
requests = "^2.31.0"

[tool.poetry.group.doc.dependencies]
Sphinx = "^7.0.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--maxfail=4 --strict-markers"
